# TesseractFlow

./: .agents  .env  .gitignore  BUGS_FOUND.md  CHANGELOG.md  CLAUDE.md  CODEX_GUIDE.md  CONTRIBUTING.md  HAIKU_JSON_PARSING_FIX.md  LICENSE  PATCH_ANALYSIS.md  PROJECT_EVALUATION.md  README.md  ROADMAP.md  analyze_gpt5mini_clustering.py  analyze_v32_vs_r1.py  cheap_models_config.yaml  cheap_results.json  complete_experiment_results.json  comprehensive_rubric_results.json  deepseek_only_config.yaml  final_test_results.json  fix_async_workflows.py  pyproject.toml  results_test.json  run_wave4.sh  run_wave4_n5.sh  simple_results.json  simple_test_config.yaml  test_openrouter_config.yaml
.claude/skills/tesseract-experiment-designer/: README.md  SKILL.md
.claude/skills/tesseract-experiment-designer/references/: experiment-template.yaml  model-quick-reference.md
.specify/memory/: constitution.md
docs/: CONVERSATION_SUMMARY_2025_10_26.md  dspy-integration-research.md  evaluator_comparison_gpt5mini.md  iteration-patterns.md  openrouter-model-capabilities.md  openrouter-model-costs.md  wave4_reasoning_vs_experiments.md
docs/api/: core-modules.md
docs/architecture/: generation-strategies.md  simplified-hitl.md  unified-spec.md
docs/development/: git_pr_troubleshooting.md  setup.md  workflow_implementation_guide.md
docs/user-guide/: configuration.md  getting-started.md  interpreting-results.md  quickstart.md
examples/: README.md
examples/code_review/: comprehensive_rubric_config.yaml  experiment.yaml  experiment_config.yaml  workflow.py  workflow_config.yaml
examples/code_review/sample_code/: example1.py  example2.py
experiments/: EXPERIMENT_COSTS.md  EXPERIMENT_LOG.md  FINDINGS.md  character_results.json  character_results_n1.json  character_results_n5_fixed.json  deepseek_character_development.yaml  deepseek_character_development_v32.yaml  deepseek_code_review_optimization.yaml  deepseek_dialogue_enhancement.yaml  deepseek_dialogue_enhancement_v32.yaml  deepseek_fiction_scene_generation.yaml  deepseek_fiction_scene_generation_v32.yaml  deepseek_optimization.yaml  deepseek_progressive_discovery.yaml  deepseek_progressive_discovery_v32.yaml  deepseek_results.json  dialogue_results.json  dialogue_results_n1.json  dialogue_results_n5_fixed.json  discovery_results.json  discovery_results_n1.json  discovery_results_n5_fixed.json  fiction_results.json  fiction_results_n1.json  fiction_results_n5_fixed.json  rubric_review_experiment.yaml  rubric_review_results.json  v32_character_n1_fixed.json  v32_context_n1.json  v32_cross_domain_n1.json  v32_dialogue_n1_fixed.json  v32_discovery_n1_fixed.json  v32_fiction_n1_fixed.json  v32_iterative_n1.json  v32_thinking_styles_n1.json  wave2_lore_expansion.yaml  wave2_lore_results_n1.json  wave2_structured_outputs.yaml  wave2_thinking_styles.yaml  (+66 more)
experiments/failed/: README.md  wave2_temperature_mapping.yaml
specs/001-mvp-optimizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-optimizer/checklists/: requirements.md
specs/001-mvp-optimizer/contracts/: cli-commands.md  core-apis.md
specs/001.5-use-case-validation/: spec.md  storypunk-experiment-designs.md  storypunk-integration-plan.md
specs/002-web-ui-api/: plan.md  spec.md
tesseract_flow/: __init__.py  implementation.patch
tesseract_flow/cli/: __init__.py  analyze.py  experiment.py  main.py  visualize.py
tesseract_flow/core/: __init__.py  base_workflow.py  config.py  exceptions.py  mixins.py  strategies.py  types.py
tesseract_flow/evaluation/: __init__.py  cache.py  metrics.py  rubric.py
tesseract_flow/experiments/: __init__.py  analysis.py  executor.py  taguchi.py
tesseract_flow/optimization/: __init__.py  pareto.py  utility.py
tesseract_flow/workflows/: __init__.py  character_development.py  character_profile.py  code_review.py  context_efficiency.py  dialogue_enhancement.py  fiction_scene.py  iterative_refinement.py  lore_expansion.py  multi_domain.py  multi_task_benchmark.py  progressive_discovery.py  reasoning_transparency.py
tests/: conftest.py
tests/fixtures/: experiment_results.json
tests/integration/: test_cli.py  test_cli_help.py  test_code_review.py  test_evaluation.py
tests/unit/: test_analysis.py  test_base_workflow.py  test_cache.py  test_config.py  test_error_handling.py  test_executor.py  test_main_effects.py  test_metrics.py  test_mixins.py  test_pareto.py  test_rubric.py  test_strategies.py  test_taguchi.py  test_utility.py
